Closed
Bug 1059302
Opened 11 years ago
Closed 11 years ago
IonMonkey MIPS Simulator: Fix printing float register values and errors on wrong register name.
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: rankov, Assigned: aleksandar.zlicic)
Details
Attachments
(1 file, 1 obsolete file)
3.94 KB,
patch
|
aleksandar.zlicic
:
review+
|
Details | Diff | Splinter Review |
Debugger for MIPS Simulator crashes when printing value of float register or entering wrong register name.
Reporter | ||
Comment 1•11 years ago
|
||
Assigning to Aleksandar. Aleksandar is now starting to work with me on maintaining SpiderMonkey MIPS port.
Assignee: nobody → aleksandar.zlicic
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•11 years ago
|
||
Assignee | ||
Updated•11 years ago
|
Attachment #8481239 -
Flags: review?(jdemooij)
Comment 3•11 years ago
|
||
Comment on attachment 8481239 [details] [diff] [review]
Bug_1059302.patch
Review of attachment 8481239 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jit/mips/Simulator-mips.cpp
@@ +777,5 @@
> printAllRegs();
>
> printf("\n\n");
> // f0, f1, f2, ... f31.
> + for (uint32_t i = 0; i < FloatRegisters::TotalSingle; i ++) {
Nit: i++ (no space)
@@ +936,5 @@
> if (reg != InvalidReg) {
> value = getRegisterValue(reg.code());
> printf("%s: 0x%08x %d \n", arg1, value, value);
> + } else if (fCode != FloatRegisters::Invalid) {
> + if ( fCode & 0x1 ) {
Nit: if (fCode & 0x1) {
Attachment #8481239 -
Flags: review?(jdemooij) → review+
Assignee | ||
Comment 4•11 years ago
|
||
Carry review from previous patch.
I have fixed issues noted by Jan de Mooij in comment #3.
Attachment #8481239 -
Attachment is obsolete: true
Attachment #8488613 -
Flags: review+
Reporter | ||
Comment 5•11 years ago
|
||
Comment 6•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•