Bug 1059302 - IonMonkey MIPS Simulator: Fix printing float register values and errors on wrong register name. r=jandem